# EnergyMonitor

./: .gitmodules  CMakeLists.txt  README.md  config.json  frompi.sh  run.sh  solarmax code.txt  topi.sh  workspace.code-workspace
ext/: CMakeLists.txt
ext/bcm2835/src/: CMakeLists.txt
src/: BackgroundTask.cpp  BackgroundTask.h  CMakeLists.txt  Channel.h  Command.h  Log.cpp  Log.h  Main.cpp  Options.cpp  Options.h  Post.cpp  Post.h  Power.cpp  Power.h  Server.cpp  Server.h  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  Solar.cpp  Solar.h  SolarMax.cpp  SolarMax.h  Util.cpp  Util.h
ui/: .eslintcache  package-lock.json  package.json  topi.sh
ui/src/: App.js
ui/src/components/Graph/: Graph.css  Graph.js
ui/src/components/Sources/: Sources.css  Sources.js
ui/src/components/Sources/Source/: Source.js
